syntax = "proto3";

package pb;

option go_package = "./";

import "google/protobuf/timestamp.proto";

service UserService {
    // rpc ViewProfile(ID) returns (Profile); 
    rpc BlockUser(ID) returns(Response);
    rpc UnBlockUser(ID) returns(Response);
    rpc GetAllUsers(NoParam) returns(UserList);
    rpc ViewProfile(ID) returns(Profile);

    rpc GetUserProfileStats (UserStatsRequest) returns (UserStatsProfileResponse);
    rpc GetSubscriptionStats (SubscriptionStatsRequest) returns (SubscriptionStatsResponse);
}

message SubscriptionStatsRequest {}

message SubscriptionStatsResponse {
    int32 basic_plan_subscribers = 1;
    int32 standard_plan_subscribers = 2;
    int32 premium_plan_subscribers = 3;
    uint32 total_amount_collected_lifetime = 4;
    uint32 total_amount_collected_weekly = 5;
    uint32 total_amount_collected_monthly = 6;
    uint32 total_amount_collected_yearly = 7;
}

message UserStatsRequest {}

message UserStatsProfileResponse {
    int32 total_users = 1;
    int32 active_users = 2;
    int32 blocked_users = 3;
    int32 prime_users = 4;
    int32 non_prime_users = 5;
}

message ID {
    string ID = 1;
}

message Response {
    enum Status {
        OK = 0;
        ERROR = 1;
    }

    Status status = 1;
    string message = 2;
    oneof payload {
        string error = 3;
        string data = 4;
    }
}

message NoParam{}

message UserList {
    repeated Profile users = 1;
}

message Profile {
    string User_ID = 1;
    string User_Name = 2;
    string Email = 3; 
    string Phone = 4;
    bool is_Prime_Member = 5;
    bool Is_Blocked = 6;
    google.protobuf.Timestamp membership_Expiry_Date = 7;
}